--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
         </div>
 
         <div class="section-watercolor" id='section-watercolor'>
-            <img class="bg" src="./images/img (1).png" alt="">
+            <!-- <img class="bg" src="./images/img (1).png" alt=""> -->
             <div class="text section-text">
                 <h1>Портреты акварелью</h1>
                 <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ab distinctio, quae esse consequuntur
@@ -89,8 +89,8 @@
     </div>
 
     <div class="section-inc" id='section-inc'>
-        <img class="bg1" src="./images/incbg (2).png" alt="">
-        <img class="bg2" src="./images/incbg (1).png" alt="">
+        <!-- <img class="bg1" src="./images/incbg (2).png" alt="">
+        <img class="bg2" src="./images/incbg (1).png" alt=""> -->
         <div class="text section-text">
             <h1>Портреты тушью</h1>
             <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ab distinctio, quae esse consequuntur
@@ -113,8 +113,8 @@
         </div> -->
     </div>
     <div class="section-pencil" id='section-pencil'>
-        <img class="bg1" src="./images/img (16).png" alt="">
-        <!-- <img class="bg2" src="./images/incbg (1).png" alt=""> -->
+        <!-- <img class="bg1" src="./images/img (16).png" alt=""> -->
+
         <div class="text section-text">
             <h1>Портреты карандашом</h1>
             <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ab distinctio, quae esse consequuntur
@@ -134,8 +134,8 @@
         </div> -->
     </div>
     <div class="section-sepia" id='section-sepia'>
-        <img class="bg1" src="./images/img (2).png" alt="">
-        <!-- <img class="bg2" src="./images/incbg (1).png" alt=""> -->
+        <!-- <img class="bg1" src="./images/img (2).png" alt=""> -->
+
         <div class="text section-text">
             <h1>Портреты Сепия</h1>
             <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ab distinctio, quae esse consequuntur
@@ -157,8 +157,8 @@
         </div> -->
     </div>
     <div class="section-price" id='section-price'>
-        <img class="bg1" src="./images/img (3).png" alt="">
-        <!-- <img class="bg2" src="./images/incbg (1).png" alt=""> -->
+        <!-- <img class="bg1" src="./images/img (3).png" alt=""> -->
+
         <div class="text section-text">
             <h1>Рассчет стоимости</h1>
             <p> Выберите материал и размер:</p>
