parallax without sliders

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
     <!-- <link rel="stylesheet" type="text/css" href="/libs/uicss/uikit.min.css" /> -->
 
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/uikit@3.6.16/dist/css/uikit.min.css" />
+    <!-- <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/uikit@3.6.16/dist/css/uikit.min.css" /> -->
 
 
 
@@ -315,8 +315,8 @@
         </div>
     </div>
 
-    <script src="https://cdn.jsdelivr.net/npm/uikit@3.6.16/dist/js/uikit.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/uikit@3.6.16/dist/js/uikit-icons.min.js"></script>
+    <!-- <script src="https://cdn.jsdelivr.net/npm/uikit@3.6.16/dist/js/uikit.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/uikit@3.6.16/dist/js/uikit-icons.min.js"></script> -->
 
     <!-- <script src="/libs/uijs/uikit.min.js"></script>
     <script src="/libs/uijs/uikit-icons.min.js"></script> -->
