--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 
             <div class="text text-main">
                 <h1>Victory Art Line</h1>
-                <p>Портреты <br> на заказ <br> по фото</p>
+                <p  onclick={x(7)}>Портреты <br> на заказ <br> по фото</p>
             </div>
         </div>
 
