--- a/index.html
+++ b/index.html
@@ -6,16 +6,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
-    <!-- <link rel="stylesheet" type="text/css" href="/libs/uicss/uikit.min.css" /> -->
+
 
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/uikit@3.6.16/dist/css/uikit.min.css" />
 
 
 
     <link rel="stylesheet" type="text/css" href="css/main.css">
-    <!-- <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.min.css" /> -->
-    <!-- <script src="https://cdn.jsdelivr.net/npm/uikit@3.6.16/dist/js/uikit.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/uikit@3.6.16/dist/js/uikit-icons.min.js"></script> -->
+
+    <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.min.css" />
+
 
     <title>Victory Art Line</title>
 </head>
@@ -51,12 +51,12 @@
 
             <div class="text text-main">
                 <h1>Victory Art Line</h1>
-                <p  onclick={x(7)}>Портреты <br> на заказ <br> по фото</p>
+                <p >Портреты <br> на заказ <br> по фото</p>
             </div>
         </div>
 
         <div class="section-watercolor" id='section-watercolor'>
-            <!-- <img class="bg" src="./images/img (1).png" alt=""> -->
+            <img class="bg" src="./images/img (1).png" alt="">
             <div class="text section-text" data-aos="fade-up" data-aos-duration="800">
                 <h1>Портреты акварелью</h1>
                 <p>Сайт рыбатекст поможет дизайнеру, верстальщику, вебмастеру сгенерировать несколько абзацев более
@@ -64,10 +64,26 @@
                 </p>
             </div>
 
+            <!-- <div class="swiper-container">
+                <div class="swiper-wrapper">
+                  <div class="swiper-slide" style="background-image:url(./images/img (5).png)"></div>
+                  <div class="swiper-slide" style="background-image:url(./images/nature-2.jpg)"></div>
+                  <div class="swiper-slide" style="background-image:url(./images/nature-3.jpg)"></div>
+                  <div class="swiper-slide" style="background-image:url(./images/nature-4.jpg)"></div>
+                  <div class="swiper-slide" style="background-image:url(./images/nature-5.jpg)"></div>
+                  <div class="swiper-slide" style="background-image:url(./images/nature-6.jpg)"></div>
+                  <div class="swiper-slide" style="background-image:url(./images/nature-7.jpg)"></div>
+                  <div class="swiper-slide" style="background-image:url(./images/nature-8.jpg)"></div>
+                  <div class="swiper-slide" style="background-image:url(./images/nature-9.jpg)"></div>
+                  <div class="swiper-slide" style="background-image:url(./images/nature-10.jpg)"></div>
+                </div>
+               
+                <div class="swiper-pagination"></div>
+              </div> -->
+      
 
 
-
-            <div 
+            <!-- <div 
             data-aos="fade-up" 
             data-aos-duration="1200" 
             class="uk-position-relative uk-visible-toggle uk-light"
@@ -101,7 +117,7 @@
                 <a class="uk-position-center-right uk-position-small uk-hidden-hover" href="#" uk-slidenav-next
                     uk-slider-item="next"></a>
 
-            </div>
+            </div> -->
 
 
 
@@ -138,7 +154,7 @@
 
         <div class="section-inc" id='section-inc'>
             <!-- <img class="bg1" src="./images/incbg (2).png" alt=""> -->
-            <!-- <img class="bg2" src="./images/incbg (1).png" alt=""> -->
+            <img class="bg2" src="./images/incbg (1).png" alt="">
             <div class="text section-text" data-aos="fade-up" data-aos-duration="800">
                 <h1>Портреты тушью</h1>
                 <p> а начинающему оратору отточить навык публичных
@@ -147,7 +163,7 @@
                 </p>
             </div>
 
-
+<!-- 
             <div class="uk-position-relative uk-visible-toggle uk-light" tabindex="-1"
                 uk-slider="clsActivated: uk-transition-active; center: true"
                 data-aos="fade-up" 
@@ -186,7 +202,7 @@
                 <a class="uk-position-center-right uk-position-small uk-hidden-hover" href="#" uk-slidenav-next
                     uk-slider-item="next"></a>
 
-            </div>
+            </div> -->
 
             <!-- <div class="swiper-container">
             <div class="swiper-wrapper">
@@ -204,7 +220,7 @@
         </div>
 
         <div class="section-pencil" id='section-pencil'>
-            <!-- <img class="bg1" src="./images/img (16).png" alt=""> -->
+            <img class="bg1" src="./images/img (16).png" alt="">
 
             <div class="text section-text" data-aos="fade-up" data-aos-duration="800">
                 <h1>Портреты карандашом</h1>
@@ -224,7 +240,9 @@
             </div>
             <div class="swiper-pagination"></div>
         </div> -->
-            <div class="uk-position-relative uk-visible-toggle uk-light" tabindex="-1"
+
+
+            <!-- <div class="uk-position-relative uk-visible-toggle uk-light" tabindex="-1"
                 uk-slider="clsActivated: uk-transition-active; center: true"
                 data-aos="fade-up" 
                 data-aos-duration="1200" >
@@ -251,13 +269,13 @@
                 <a class="uk-position-center-right uk-position-small uk-hidden-hover" href="#" uk-slidenav-next
                     uk-slider-item="next"></a>
 
-            </div>
+            </div> -->
 
         </div>
 
 
         <div class="section-sepia" id='section-sepia'>
-            <!-- <img class="bg1" src="./images/img (2).png" alt=""> -->
+            <img class="bg1" src="./images/img (2).png" alt="">
 
             <div class="text section-text" data-aos="fade-up" data-aos-duration="800">
                 <h1>Портреты Сепия</h1>
@@ -266,7 +284,7 @@
                 </p>
             </div>
 
-            <div class="uk-position-relative uk-visible-toggle uk-light" tabindex="-1"
+            <!-- <div class="uk-position-relative uk-visible-toggle uk-light" tabindex="-1"
                 uk-slider="clsActivated: uk-transition-active; center: true"
                 data-aos="fade-up" 
                 data-aos-duration="1200" >
@@ -299,7 +317,7 @@
                 <a class="uk-position-center-right uk-position-small uk-hidden-hover" href="#" uk-slidenav-next
                     uk-slider-item="next"></a>
 
-            </div>
+            </div> -->
 
             <!-- <div class="swiper-container">
             <div class="swiper-wrapper">
@@ -329,22 +347,22 @@
 
    
 
-    <!-- <script src="/libs/uijs/uikit.min.js"></script>
-    <script src="/libs/uijs/uikit-icons.min.js"></script> -->
+  
 
     <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
     <script>
         AOS.init();
     </script>
-     <script src="https://cdn.jsdelivr.net/npm/uikit@3.6.16/dist/js/uikit.min.js"></script>
-     <script src="https://cdn.jsdelivr.net/npm/uikit@3.6.16/dist/js/uikit-icons.min.js"></script>
+     <!-- <script src="https://cdn.jsdelivr.net/npm/uikit@3.6.16/dist/js/uikit.min.js"></script>
+     <script src="https://cdn.jsdelivr.net/npm/uikit@3.6.16/dist/js/uikit-icons.min.js"></script> -->
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/2.1.3/TweenMax.min.js"
         integrity="sha256-lPE3wjN2a7ABWHbGz7+MKBJaykyzqCbU96BJWjio86U=" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/2.1.3/TimelineMax.min.js"
         integrity="sha256-fIkQKQryItPqpaWZbtwG25Jp2p5ujqo/NwJrfqAB+Qk=" crossorigin="anonymous"></script>
 
-    <!-- <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script> -->
+    <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
+
     <script src="./js/index.js"></script>
 </body>
 
