--- a/index.html
+++ b/index.html
@@ -15,12 +15,19 @@
     <link rel="stylesheet" type="text/css" href="css/main.css">
 
     <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.min.css" />
+    
 
 
     <title>Victory Art Line</title>
 </head>
 
 <body>
+    <div class="loader">
+        <div class="loader-text">
+            <h1>Victory Art Line</h1>
+        </div>
+    </div>
+
     <div class="burger ">
         <div></div>
         <div></div>
