--- a/index.html
+++ b/index.html
@@ -22,11 +22,11 @@
 </head>
 
 <body>
-    <div class="loader">
+    <!-- <div class="loader">
         <div class="loader-text">
             <h1>Victory Art Line</h1>
         </div>
-    </div>
+    </div> -->
 
     <div class="burger ">
         <div></div>
@@ -118,7 +118,7 @@
         <div class="section-inc section flex reverce" id='section-inc'>
             <!-- <img class="bg1" src="./images/incbg (2).png" alt=""> -->
             
-            <!-- <img class="bg2" src="./images/bg/тушь.jpg" alt=""> -->
+            <img class="bg2" src="./images/bg/тушь.jpg" alt="">
 
             <!-- <img class="bg2" src="./images/incbg (1).png" alt=""> -->
             <div class="text section-text" data-aos="fade-up" data-aos-duration="500">
@@ -158,7 +158,7 @@
         </div>
 
         <div class="section-pencil section flex" id='section-pencil'>
-            <!-- <img class="bg1" src="./images/bg/карандаш.jpg" alt=""> -->
+            <img class="bg1" src="./images/bg/карандаш.jpg" alt="">
 
             <div class="text section-text" data-aos="fade-up" data-aos-duration="500">
                 <h1>Портрет карандашом</h1>
@@ -197,7 +197,7 @@
 
         <div class="section-sepia section flex reverce" id='section-sepia'>
             <!-- <img class="bg1" src="./images/bg/сепия.jpg" alt=""> -->
-            <!-- <div class="bg"></div> -->
+            <div class="bg"></div>
 
             <div class="text section-text" data-aos="fade-up" data-aos-duration="500">
                 <h1>Портрет Сепия</h1>
@@ -292,6 +292,10 @@
     <script>
         AOS.init();
     </script>
+
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/smoothscroll/1.4.10/SmoothScroll.min.js"></script>
+
+
     <!-- <script src="https://cdn.jsdelivr.net/npm/uikit@3.6.16/dist/js/uikit.min.js"></script>
      <script src="https://cdn.jsdelivr.net/npm/uikit@3.6.16/dist/js/uikit-icons.min.js"></script> -->
 
