--- a/index.html
+++ b/index.html
@@ -22,11 +22,11 @@
 </head>
 
 <body>
-    <!-- <div class="loader">
+    <div class="loader">
         <div class="loader-text">
             <h1>Victory Art Line</h1>
         </div>
-    </div> -->
+    </div>
 
     <div class="burger ">
         <div></div>
