--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
             </div>
 
 
-            <div class="swiper-container "
+            <div class="swiper-container sw1"
             data-aos="fade-up" 
             data-aos-duration="500">
                 <div class="swiper-wrapper">
@@ -129,7 +129,7 @@
                 </p>
             </div>
 
-            <div class="swiper-container"
+            <div class="swiper-container sw2"
             data-aos="fade-up" 
             data-aos-duration="500">
                 <div class="swiper-wrapper">
@@ -169,7 +169,7 @@
                 </p>
             </div>
 
-            <div class="swiper-container"
+            <div class="swiper-container sw3"
             data-aos="fade-up" 
             data-aos-duration="500">
                 <div class="swiper-wrapper">
@@ -208,7 +208,7 @@
                 </p>
             </div>
 
-            <div class="swiper-container"   
+            <div class="swiper-container sw4"   
              data-aos="fade-up" 
             data-aos-duration="500">
                 <div class="swiper-wrapper">
@@ -243,7 +243,7 @@
                 </p>
             </div>
 
-            <div class="swiper-container"   
+            <div class="swiper-container sw5"   
              data-aos="fade-up" 
             data-aos-duration="500">
                 <div class="swiper-wrapper">
