--- a/index.html
+++ b/index.html
@@ -22,11 +22,11 @@
 </head>
 
 <body>
-    <div class="loader">
+    <!-- <div class="loader">
         <div class="loader-text">
             <h1>Victory Art Line</h1>
         </div>
-    </div>
+    </div> -->
 
     <div class="burger ">
         <div></div>
@@ -86,6 +86,7 @@
                     Исключительной особенностью акварели является богатство оттенков, ощущение воздушности и тонкости
                     цветовых переходов.
                 </p>
+                <div class ='btn'>Заказать</div>
             </div>
 
 
@@ -107,7 +108,7 @@
                 </div>
                 <div class="swiper-pagination"></div>
 
-                <div class="swiper-button-next"></div>
+                <div class="swiper-button-next "></div>
                 <div class="swiper-button-prev"></div>
             </div>
         </div>
@@ -127,6 +128,7 @@
                     Портрет исполненный тушью несомненно выберут любители бархатистых переходов тонов одноцветной,
                     оттеночной живописи совмещенной с четкими и энергичными линиями.
                 </p>
+                <div class ='btn'>Заказать</div>
             </div>
 
             <div class="swiper-container sw2"
@@ -167,6 +169,7 @@
                     тонального разнообразия и мягкие, тонкие светотеневые переходы делающие портрет живым, дышащим
                     и фотореалистичным
                 </p>
+                <div class ='btn'>Заказать</div>
             </div>
 
             <div class="swiper-container sw3"
@@ -206,6 +209,7 @@
                     фотографии и ее настроение. Сепия обладает мягким и выразительным каричневым оттенком, который
                     придает портрету особую изысканную игру эмоций
                 </p>
+                <div class ='btn'>Заказать</div>
             </div>
 
             <div class="swiper-container sw4"   
@@ -241,6 +245,7 @@
                 <p>
                     Сепия станет прекрасным материалом для любителей реалистичных растушовок, идеально копирующих тона фотографии и ее настроение. Сепия обладает мягким и выразительным каричневым оттенком, который придает портрету особую изысканную игру эмоций
                 </p>
+                <div class ='btn'>Заказать</div>
             </div>
 
             <div class="swiper-container sw5"   
